--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -11,4 +11,5 @@
 @import "partials/upload-games";
 @import "partials/face-to-face";
 @import "partials/records";
+@import "partials/records-id";
 @import "partials/api";
