--- a/public/views/records.ejs
+++ b/public/views/records.ejs
@@ -1,6 +1,22 @@
 <%- include('./partials/header')-%>
 
     <main>
+        <div>¿Desea ver records individuales?</div>
+        <div>
+            <a href="/records/?player=Leo">Leo</a>
+        </div>
+        <div>
+            <a href="/records/?player=Max">Max</a>
+        </div>
+        <div>
+            <a href="/records/?player=Nico">Nico</a>
+        </div>
+        <div>
+            <a href="/records/?player=Santi">Santi</a>
+        </div>
+        <div>
+            <a href="/records/?player=Lucho">Lucho</a>
+        </div>
         <div class="records">
             <div class="records__container records__container-score">
                 <span class="title bold">Mayor diferencia de gol</span>
