--- a/public/views/records-id.ejs
+++ b/public/views/records-id.ejs
@@ -3,12 +3,28 @@
     <main>
         <div class="individual-records">
             <div class="individual-records__container">
-                <div>Victorias por equipo de <span class="bold">
+                <div class="title">Partidos por equipo de <span class="bold">
                         <%=playerQuery%>
                     </span></div>
                 <div>
                     <ol class="list-group-numbered">
-                        <%orderedArrayOfTeamsWithWins.forEach(function(element, index) {%>
+                        <%arrayOfTeamsWithWins.sort(function(a,b) { if(a.matches < b.matches) { return 1 } else {
+                            return-1 }}).forEach(function(element, index) {%>
+                            <li>
+                                <%=element.team%>: <%=element.matches%>
+                            </li>
+                            <%});%>
+                    </ol>
+                </div>
+            </div>
+            <div class="individual-records__container">
+                <div class="title">Victorias por equipo de <span class="bold">
+                        <%=playerQuery%>
+                    </span></div>
+                <div>
+                    <ol class="list-group-numbered">
+                        <%arrayOfTeamsWithWins.sort(function(a,b) { if(a.victories < b.victories) { return 1 } else {
+                            return -1 }}).forEach(function(element, index) {%>
                             <li>
                                 <%=element.team%>: <%=element.victories%>
                             </li>
@@ -16,12 +32,24 @@
                     </ol>
                 </div>
             </div>
-
             <div class="individual-records__container">
-                <div>Cantidad de victorias por torneo</div>
+                <div class="title">Efectividad (%)</div>
+                <div>
+                    <ol class="list-group-numbered">
+                        <%arrayOfTeamsWithWins.sort(function(a,b) { if (a.winRate < b.winRate) { return 1 } else
+                            {return-1 }}).forEach(function(element, index) {%>
+                            <li>
+                                <%=element.team%>: <%=(element.winRate).toFixed(2)%>%
+                            </li>
+                            <%});%>
+                    </ol>
+                </div>
+            </div>
+            <div class="individual-records__container">
+                <div class="title">Cantidad de victorias por torneo</div>
                 <div>
                     <ul>
-                        <%orderedArrayOfWinsByTournament.forEach(function(element, index) {%>
+                        <%arrayOfWinsByTournament.forEach(function(element, index) {%>
                             <li>
                                 <%=element.tournament%>: <%=element.victories%>
                             </li>
