--- a/public/views/partials/header.ejs
+++ b/public/views/partials/header.ejs
@@ -23,7 +23,7 @@
 <body id="body" class="preload">
 
     <header>
-        <a href="./">
+        <a href="/">
             <img class="header__img" src="./../img/logo.jpg" alt="" />
         </a>
         <form action="/logout" method="post">
