--- a/public/views/upload-games.ejs
+++ b/public/views/upload-games.ejs
@@ -83,7 +83,8 @@
                     </label>
                     <select id="teamP1" name="teamP1" required>
                         <option selected disabled value="">Equipo J1</option>
-                        <%tournamentById.teams.forEach(function(element, index) {%>
+                        <%tournamentById.teams.sort(function(a,b) { if(a> b) { return 1 } else {
+                            return-1}}).forEach(function(element, index) {%>
                             <option id="<%=element%>" value="<%=element%>">
                                 <%=element%>
                             </option>
@@ -110,7 +111,6 @@
                             </option>
                             <%});%>
                     </select>
-                    <span class="customizedArrow"></span>
                 </div>
                 <div class="form__container-row">
                     <label>
@@ -118,18 +118,47 @@
                     </label>
                     <select id="teamP2" name="teamP2" required>
                         <option selected disabled value="">Equipo J2</option>
-                        <%tournamentById.teams.forEach(function(element, index) {%>
+                        <%tournamentById.teams.sort(function(a,b) { if(a> b) { return 1 } else {
+                            return-1}}).forEach(function(element, index) {%>
                             <option id="<%=element%>" value="<%=element%>">
                                 <%=element%>
                             </option>
                             <%});%>
                     </select>
-                    <span class="customizedArrow"></span>
                 </div>
                 <div class="form__container-row">
                     <label>Seleccione el score:</label>
                     <input id="scoreP2" name='scoreP2' placeholder="Marcador J2" type="number" min="0" required>
                 </div>
+            </div>
+
+            <div id="penalties" class="form__container penalties">
+                <div>¿Penales?</div>
+                <div class="form-check">
+                    <input id="penalties-yes" name="penalties-radio" class="form-check-input" type="radio" value="yes">
+                    <label class="form-check-label" for="penalties-yes">
+                        Sí
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input id="penalties-no" name="penalties-radio" class="form-check-input" type="radio" value="no"
+                        checked>
+                    <label class="form-check-label" for="penalties-no">
+                        No
+                    </label>
+                </div>
+                <label>
+                    Penales anotados (J1):
+                </label>
+                <input id="penaltyScoreP1" name='penaltyScoreP1' value="0" min="0" placeholder="Penales J1"
+                    type="number" min="0">
+                <label>
+                    Penales anotados (J2):
+                </label>
+                <input id="penaltyScoreP2" name='penaltyScoreP2' value="0" min="0" placeholder="Penales J2"
+                    type="number" min="0">
+                <span class="customizedArrow"></span>
+            </div>
             </div>
 
             <div class="form__container">
