--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -8,6 +8,8 @@
 @import "partials/modal";
 @import "partials/main";
 @import "partials/create-tournament";
+@import "partials/lottery";
+@import "partials/tournaments-id";
 @import "partials/upload-games";
 @import "partials/face-to-face";
 @import "partials/records";
