--- a/public/views/logout.ejs
+++ b/public/views/logout.ejs
@@ -1,4 +1,4 @@
-<%- include('./partials/encabezado')-%>
+<%- include('./partials/header')-%>
 
     <script>
         setTimeout(() => {
@@ -12,4 +12,4 @@
             </div>
         </div>
     </main>
-    <%- include('./partials/pie')-%>
+    <%- include('./partials/footer')-%>
