--- a/public/views/partials/header.ejs
+++ b/public/views/partials/header.ejs
@@ -50,6 +50,12 @@
                     <a class="nav__list-option-link" href="/create-tournament">Crear torneo</a>
                 </li>
                 <li id="" class="nav__list-option">
+                    <a class="nav__list-option-link" href="/lottery-tournament-selection">Sortear equipos</a>
+                </li>
+                <li id="" class="nav__list-option">
+                    <a class="nav__list-option-link" href="/fixture">Fixture</a>
+                </li>
+                <li id="" class="nav__list-option">
                     <a class="nav__list-option-link" href="/upload-games">Cargar partidos</a>
                 </li>
                 <li id="" class="nav__list-option">
