--- a/public/views/upload-games.ejs
+++ b/public/views/upload-games.ejs
@@ -83,10 +83,10 @@
                     </label>
                     <select id="teamP1" name="teamP1" required>
                         <option selected disabled value="">Equipo J1</option>
-                        <%tournamentById.teams.sort(function(a,b) { if(a> b) { return 1 } else {
+                        <%tournamentById.teams.sort(function(a,b) { if(a.team> b.team) { return 1 } else {
                             return-1}}).forEach(function(element, index) {%>
-                            <option id="<%=element%>" value="<%=element%>">
-                                <%=element%>
+                            <option id="<%=element.team%>" value="<%=element.team%>">
+                                <%=element.team%>
                             </option>
                             <%});%>
                     </select>
@@ -118,10 +118,10 @@
                     </label>
                     <select id="teamP2" name="teamP2" required>
                         <option selected disabled value="">Equipo J2</option>
-                        <%tournamentById.teams.sort(function(a,b) { if(a> b) { return 1 } else {
+                        <%tournamentById.teams.sort(function(a,b) { if(a.team> b.team) { return 1 } else {
                             return-1}}).forEach(function(element, index) {%>
-                            <option id="<%=element%>" value="<%=element%>">
-                                <%=element%>
+                            <option id="<%=element.team%>" value="<%=element.team%>">
+                                <%=element.team%>
                             </option>
                             <%});%>
                     </select>
