--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -9,6 +9,8 @@
 @import "partials/main";
 @import "partials/create-tournament";
 @import "partials/lottery";
+@import "partials/standings";
+@import "partials/standings-id";
 @import "partials/tournaments-id";
 @import "partials/upload-games";
 @import "partials/face-to-face";
