--- a/public/views/fixture-id.ejs
+++ b/public/views/fixture-id.ejs
@@ -47,7 +47,7 @@
                                                         <%=element.playerP2%>
                                                     </span>
                                                 </div>
-                                                <input type="submit" class="fixture-submit">
+                                                <input type="submit" value="Editar" class="fixture-submit">
                     </div>
                 </form>
 
