--- a/public/views/partials/header.ejs
+++ b/public/views/partials/header.ejs
@@ -44,7 +44,7 @@
                     <a class="nav__list-option-link" href="/login">Login</a>
                 </li>
                 <li id="" class="nav__list-option">
-                    <a class="nav__list-option-link" href="/tournaments">Torneos</a>
+                    <a class="nav__list-option-link" href="/standings">Clasificación</a>
                 </li>
                 <li id="" class="nav__list-option">
                     <a class="nav__list-option-link" href="/create-tournament">Crear torneo</a>
