--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,12 +23,33 @@
   transition: none !important;
 }
 
+body {
+  background-color: rgba(255, 254, 254, 0.918);
+}
+
 .italic {
   font-style: italic;
 }
 
 .no-index {
   display: none;
+}
+
+.return {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 5rem 0;
 }
 
 header {
@@ -1123,6 +1144,120 @@ main .container__tournament .container__trajectory .trajectory-trophies .small-d
   width: 100%;
 }
 
+.tournament__container {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: beige;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 auto;
+  width: 100%;
+}
+.tournament__container .tournament {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-size: cover;
+  background-position: center;
+  border: 4px solid #000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 400px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0.25rem;
+  padding: 1rem;
+  position: relative;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+.tournament__container .tournament:hover {
+  padding: 1rem;
+  border: 4px solid rgb(235, 54, 54);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+.tournament__container .tournament:nth-child(1) {
+  display: none;
+}
+.tournament__container .tournament:nth-child(2) {
+  background-image: url("./../../img/premier-league-background-1.jpg");
+}
+.tournament__container .tournament:nth-child(2)::before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  background-color: rgba(25, 20, 28, 0.6);
+}
+.tournament__container .tournament:nth-child(3) {
+  background-image: url("./../../img/premier-league-background-2.jpg");
+}
+.tournament__container .tournament:nth-child(3)::before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  background-color: rgba(25, 20, 28, 0.6);
+}
+.tournament__container .tournament .container__tournament-name {
+  height: 100%;
+  position: relative;
+  width: 100%;
+}
+.tournament__container .tournament .container__tournament-name .tournament-name {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 1.25rem;
+  height: 100%;
+  width: 100%;
+}
+
+.title {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 1.125rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 1rem auto;
+  padding: 1rem;
+  text-decoration: underline;
+}
+
+.table-standings {
+  font-size: 0.9rem;
+}
+
 .container__fixture {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1457,8 +1592,4 @@ table tbody tr td {
 }
 .individual-records .individual-records__container:nth-child(6) table {
   margin-bottom: 0;
-}
-
-body {
-  background-color: bisque;
 }/*# sourceMappingURL=styles.css.map */
